--- a/src/componentes/Conteudo/Conteudo.module.css
+++ b/src/componentes/Conteudo/Conteudo.module.css
@@ -1,6 +1,6 @@
-.area {
+.container {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
 }
