--- a/src/componentes/Cabecalho/Cabecalho.module.css
+++ b/src/componentes/Cabecalho/Cabecalho.module.css
@@ -1,17 +1,17 @@
 .container {
-    background-color: #2d2eba;
+    background-color: #D1F536;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
 .logo {
-    width: 300px;
-    height: 200px;
+    width: 50px;
+    height: 50px;
 }
 
 .titulo {
-    color: white;
-    font-size:3.1em;
+    color: black;
+    font-size:2.0em;
 
 }
