--- a/src/componentes/Rodape/Rodape.module.css
+++ b/src/componentes/Rodape/Rodape.module.css
@@ -1,15 +1,16 @@
 .footer {
-    background-color: #2d2eba;
+    background-color: #D1F536;
     display: absolute;
     bottom: 0px;
-    color:#fff;
+    color:black;
     width: 100%;
     position: fixed;
+    padding-top: 10px;
 }
 
 .img {
-    width: 300px;
-    height: 200px;
+    width: 50px;
+    height: 50px;
 }
 
 .imgIcon {
