Consetando CSS e refatorando cadastro e login

--- a/src/paginas/TelaLogin/TelaLogin.module.css
+++ b/src/paginas/TelaLogin/TelaLogin.module.css
@@ -5,3 +5,10 @@
     flex-direction: column;
 }
 
+.formulario {
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 30px;
+    
+}
+
