--- a/src/componentes/Conteudo/Conteudo.module.css
+++ b/src/componentes/Conteudo/Conteudo.module.css
@@ -1,6 +1,13 @@
 .container {
     display: flex;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
+}
+
+.formulario {
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 30px;
+    
 }
