--- a/src/paginas/CadastroUsuario/CadastroUsuario.module.css
+++ b/src/paginas/CadastroUsuario/CadastroUsuario.module.css
@@ -4,3 +4,14 @@
     align-items: center;
     flex-direction: column;
 }
+
+.formulario {
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 30px;
+    
+}
+
+input{
+    margin-top: 5px;
+}
