Criando delete com axios

--- a/src/componentes/Conteudo/Conteudo.module.css
+++ b/src/componentes/Conteudo/Conteudo.module.css
@@ -11,3 +11,14 @@
     padding: 30px;
     
 }
+
+.listaFavoritos {
+    list-style-type: none;
+    border-radius: 4px;
+    border: 1px solid black;
+    margin: 20px;
+}
+
+.botaoApagar {
+    
+}
