--- a/src/componentes/Conteudo/Conteudo.module.css
+++ b/src/componentes/Conteudo/Conteudo.module.css
@@ -17,8 +17,17 @@
     border-radius: 4px;
     border: 1px solid black;
     margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    justify-items: center;
+}
+
+.lista {
+    padding-left: 0px;
 }
 
 .botaoApagar {
-    
+    padding: 0px;
+    margin: 5px;
 }
